# NezuShifter

./: .gitignore  .gitmodules  CMakeLists.txt  Common.h  Shifter.cpp  Shifter.hpp  controller_emu.h  main.c  main.cpp  readme.md
cmake_modules/: Download.cmake  FindSDL2.cmake
controller_emu/: controller_emu.h  controller_emu_linux.cpp  controller_emu_win.cpp
